Bug 60144 - EDITING: Crash when inserting hyperlink
Summary: EDITING: Crash when inserting hyperlink
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.6.0.0.beta1
Hardware: All All
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: BSA bibisected36 bibisected40 target:...
Keywords: regression
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2013-02-01 06:44 UTC by Laurent Balland
Modified: 2013-02-05 15:45 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bibisect36 log (2.43 KB, text/plain)
2013-02-01 19:24 UTC, Jorendc
Details
bibisect40 log (2.79 KB, text/plain)
2013-02-01 19:24 UTC, Jorendc
Details
bt + console logs on master (33.16 KB, text/plain)
2013-02-04 20:54 UTC, Julien Nabet
Details
valgrind log (10.04 KB, text/plain)
2013-02-05 09:24 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Balland 2013-02-01 06:44:25 UTC
Problem description: 

Steps to reproduce:
1. create a new empty presentation
2. Insert > Hyperlink > New document
3. Select Edit now
4. Enter file
5. Select Presentation
6. Apply

Current behavior:
Crash: all windows close

Expected behavior:
Hyperlink inserted

Reproduce on: 3.6.4, 3.6.5, 4.0.0.2, 4.0.1.0+ (Build ID: c4820200312e3d50a12d3605147772759938bcf)
NOT reproduce on 3.5.7
              
Operating System: Windows 7
Version: 3.6.4.3 release
Comment 1 pierre-yves samyn 2013-02-01 07:30:14 UTC
Hello

Reproduced with Version 4.0.0.2 (Build ID: 5991f37846fc3763493029c4958b57282c2597e) & Windows 7 64bits

Regards
Pierre-Yves
Comment 2 Jacques Guilleron 2013-02-01 07:36:05 UTC
Confirmed on Win 7, LibreOffice 4.0.1.0+  (Build ID: c4820200312e3d50a12d3605147772759938bcf) and LO 3.6.4.1
Comment 3 Jorendc 2013-02-01 11:46:35 UTC
I can confirm this behavior. I also can't select a file using the browser icon, but I can select some 'recently opened' files using the drop down selector.

Reproducible using LibreOffice 4.0.0.2 rc2 using Linux Mint 14 x64. I'll try to find out this is a regression or not.

Thanks for reporting!
Joren

PS: Thanks for set the correct priority (Following https://wiki.documentfoundation.org/images/0/06/Prioritizing_Bugs_Flowchart.jpg)
Comment 4 Laurent Balland 2013-02-01 12:48:13 UTC
Change Importance to medium since it is not used so much.
Comment 5 Laurent Balland 2013-02-01 18:48:29 UTC
Reproduce with LibO 3.6.0.4
The pb appeared between 3.5.7 and 3.6.0.4

@Jorendc: the browser icon for New document is intended to select a directory not a file (you want to create a new one not open an existing file).
I should change my description:
Steps to reproduce:
1. create a new empty presentation
2. Insert > Hyperlink > New document
3. Select Edit now
4. Select a directory, and add a filename
5. Select Presentation
6. Apply

There is NO pb if you create a Text document, a Spreadsheet, an HTML document or a Formula document.
There IS crash if you create a Drawing or a Presentation or a Master document.
Comment 6 Laurent Balland 2013-02-01 19:04:14 UTC
Reproduce with 3.6.0.0.beta1
I found no other version just after 3.5.7 which was the last version without the bug.
Comment 7 Jorendc 2013-02-01 19:24:37 UTC
Created attachment 74065 [details]
bibisect36 log
Comment 8 Jorendc 2013-02-01 19:24:51 UTC
Created attachment 74066 [details]
bibisect40 log
Comment 9 Julien Nabet 2013-02-04 20:54:48 UTC
Created attachment 74193 [details]
bt + console logs on master

On pc Debian x86-64 with master sources updated today, I reproduced the crash.

I attached bt + console logs
Comment 10 Julien Nabet 2013-02-04 21:00:54 UTC
Thorsten/Radek: bibisect reported by Joren + bt with symbols attached, one for you?
Comment 11 Caolán McNamara 2013-02-05 09:24:39 UTC
Created attachment 74228 [details]
valgrind log
Comment 12 Caolán McNamara 2013-02-05 09:52:26 UTC
This must be a regression from http://cgit.freedesktop.org/libreoffice/core/commit/?id=528aba3a9cf91da5ce70c6d631d7b82e203f8086

These deferred-due-to-lock SfxRequests are surely supposed to be deleted in Post, not by the dispatching code. And only any deferred requests that we never get around to being dispatched should get deleted by the dispatcher.
Comment 13 Not Assigned 2013-02-05 10:29:56 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1385896fe760fe61b19a682cb7dc7fdf31d31490

Resolves: fdo#60144 only delete *unposted* SfxRequests accumulated during lock



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Caolán McNamara 2013-02-05 10:53:49 UTC
patch proposed on gerrit for 4-0 and 3-6
Comment 15 Not Assigned 2013-02-05 15:44:54 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6e927e65d3efbeacb0b22c8a234d38a262160981&h=libreoffice-3-6

Resolves: fdo#60144 only delete *unposted* SfxRequests accumulated during lock


It will be available in LibreOffice 3.6.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Not Assigned 2013-02-05 15:45:13 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=153afd7bf078b4d6992720186df987867f47acf1&h=libreoffice-4-0

Resolves: fdo#60144 only delete *unposted* SfxRequests accumulated during lock


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.