Resolves: fdo#60144 only delete *unposted* SfxRequests accumulated during lock

When the dispatched is locked, SfxRequests accumulate in aReqArr for later
dispatch when unlocked via Post

The pointers are typically deleted in Post, so only if we never get around to
posting them do we delete the unposted requests.

regression from 528aba3a9cf91da5ce70c6d631d7b82e203f8086

Change-Id: I4c214791d356ce0e5401a87b968b53e4866f6174
(cherry picked from commit 1385896fe760fe61b19a682cb7dc7fdf31d31490)
Reviewed-on: https://gerrit.libreoffice.org/1991
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>